src/main/default/objects/Quiz_Session__c/Quiz_Session__c.object-meta.xml
<CustomObject>
    <label>Quiz Session</label>
    <nameField>
        <displayFormat>QS-{0000}</displayFormat>
        <label>Session Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>