src/main/default/objects/Quiz_Session__c/fields/Player_Count__c.field-meta.xml
<CustomField>
    <fullName>Player_Count__c</fullName>
    <label>Player Count</label>
    <summaryForeignKey>Quiz_Player__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>