src/main/default/objects/Quiz_Session__c/fields/Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Question_Count__c</fullName>
    <label>Question Count</label>
    <summaryForeignKey>Quiz_Session_Question__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>