src/main/default/objects/Quiz_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Quiz_Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>